--- a/django_essencial/cap3/templates/base.html
+++ b/django_essencial/cap3/templates/base.html
@@ -4,12 +4,17 @@
     <head>
         <meta charset="utf-8">
         <title>Django Essencial - CAP 3 {% block title %} Titulo {% endblock %}</title>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css" />
+        <link rel="stylesheet" href="{% static 'css/site.css' %}" type="text/css" />
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script>
+            $(document).ready( function(){
+                alert('oi')
+            })
+        </script>
     </head>
     <body>
     {% block content %}{% endblock %}
-        <p>
-            CONTEUDO PADRÃO
-        </p>
     </body>
 </html>
