--- a/django_essencial/cap3/templates/base.html
+++ b/django_essencial/cap3/templates/base.html
@@ -10,7 +10,7 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script>
             $(document).ready( function(){
-                alert('oi')
+                //alert('oi')
             })
         </script>
     </head>
